Implement a Streaming DDI Lifecycle parser
Implements TopLevelReference, Organization, DataCollection and Methodology